@@ -1,3 +1,8 @@
+2008-06-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * Update of used plugin API to v71.
+
+
 2008-06-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * configure.in:
